--- a/Day 2/day2_assignment.Rmd
+++ b/Day 2/day2_assignment.Rmd
@@ -1,12 +1,16 @@
 ---
-title: "Day2"
+title: "Portfolio 3"
 author: "Sigurd Sørensen"
-date: '2022-08-31'
+date: "2022-08-31"
 output:
-  pdf_document: default
+  word_document: default
   html_document: default
+  pdf_document: default
 ---
-```{r}
+
+
+
+```{r error = FALSE}
 library(tidyverse)
 ```
 
@@ -20,7 +24,10 @@ rooms <- c(1, 2, 4, 5, 1, 3, 1, NA, 3, 1, 3, 2, 1, NA, 1, 8, 3, 1, 4, NA, 1, 3, 
 rooms <- c(1, 2, 4, 5, 1, 3, 1, NA, 3, 1, 3, 2, 1, NA, 1, 8, 3, 1, 4, NA, 1, 3, 1, 2, 1, 7, 1, 9, 3, NA)
 
 c(rooms > 2, complete.cases(rooms))
+```
 
+
+```{r}
 rooms[rooms >2 & !is.na(rooms)] %>% 
   length()
 
@@ -28,13 +35,15 @@ rooms[rooms >2 & !is.na(rooms)] %>%
   sum()
 
 ```
-
+**Answer:**
+12 rooms > 2 and their sum is 55. 
 
 2) What type of data is in the 'rooms' vector?
 ```{r}
 class(rooms)
 ```
-More specifically integers. 
+**Answer**
+Numeric but more specifically integers. 
 
 3) Submit the following image to Github: Inside your R Project (.Rproj), install the 'tidyverse' package and use the download.file() and read_csv() function to read the SAFI_clean.csv dataset into your R project as 'interviews' digital object (see instructions in https://datacarpentry.org/r-socialsci/setup.html and 'Starting with Data' section). Take a screenshot of your RStudio interface showing
 a) the line of code you used to create the object,
@@ -50,23 +59,34 @@ Save the screenshot as an image and put it in your AUID_lastname_firstname repos
 ![My Environment](files.png)
 4) Challenge: If you managed to create your own Danish king dataset, use it. If not, you the one attached to this assignment (it might need to be cleaned up a bit). Load the dataset into R as a tibble. Calculate the mean() and median() duration of rule over time and find the three monarchs ruling the longest. How many days did they rule (accounting for transition year?)
 
-```{r}
+The data uses , delimeters so an easy solution would be to use read_csv2() which be default uses , delimters. 
+```{r,echo = FALSE }
 #Easy Way
-df_kings <- read_csv2("kings.csv", col_names = TRUE)
+df_kings_easy <- read_csv2("kings.csv", col_names = TRUE)
 ```
 
 
-```{r}
+But a way more fun and hacky way is this way too complicated work around. :) 
+```{r echo = FALSE, warning = FALSE}
 #For fun way
 df_kings <- read_csv("kings.csv", col_names = TRUE)
+head(df_kings)
+```
+This is not readable or useful at the moment. We will have to clean it up.
 
+```{r warning= FALSE}
 newnames <- strsplit(colnames(df_kings), split = ";")[[1]]
 
 df_kings <- df_kings %>% 
   separate(colnames(df_kings)[1], newnames, sep = ";") %>%
   filter(Yearasruler != "Unknown") %>% 
   mutate_at(c("Start_date", "End_date", "Yearasruler"), as.numeric)
+
+head(df_kings)
 ```
+Voila a few magic tricks and we get the data in tidyformat. We can now run our stats on it. 
+
+
 ```{r}
 summary(df_kings$Yearasruler)
 ```
